# Auto_Wheelchair_repo

./: README.md  merged  terminal commands  wheelcontrolarduino_code
arduino_code/: voice_control
arduino_code/autunomous_cnt/: autunomous_cnt.ino
arduino_code/final_arduino_code/: final_arduino_code.ino  modular_UNO.ino
arduino_code/final_control/: final_control.ino
arduino_code/js_control/: js_control.ino
arduino_code/mode_selection/: mode_selection.ino
arduino_code/voice_control/: voice_control.ino
install/: local_setup.sh  setup.sh  setup.zsh
install/wc_robot/share/wc_robot/: package.bash  package.dsv  package.ps1  package.sh  package.xml
log/: latest_build
max78000fthr_codes/: Setup rule  main.c
movement&feedback/: digital tachometer.ino  motorserial.py  odom_py  odom_py.py  odometry.py
wc_msgs_srvs/wc_msgs/: CMakeLists.txt
wc_robot/: setup.cfg  setup.py
wc_robot/config/: lidar_sensor.sdf  ros2_control.yaml  wc.urdf  wc.urdf.xacro
wc_robot/install/: local_setup.sh  setup.sh
wc_robot/install/wc_robot/share/wc_robot/: package.dsv  package.ps1  package.sh  package.xml  package.zsh
wc_robot/launch/: gzebo_rviz.launch.py  wc_gazebo_rviz_launch.py  wc_launch.py
wc_robot/log/: latest_build
wc_robot/rviz/: wc_config.rviz
wc_robot_hd/wc_bringup/: CMakeLists.txt  package.xml
wc_robot_hd/wc_bringup/launch/: robot.launch.py  rviz2.launch.py  wc_state_publisher.launch.py
wc_robot_hd/wc_bringup/param/: wc_config.yaml
wc_robot_hd/wc_bringup/scripts/: motor_controller.py
wc_robot_hd/wc_cartographer/: CMakeLists.txt  package.xml
wc_robot_hd/wc_cartographer/launch/: cartographer.launch.py
wc_robot_hd/wc_description/: package.xml
wc_robot_hd/wc_description/urdf/: wc_bot.urdf
wc_robot_hd/wc_example/: package.xml  setup.cfg  setup.py
wc_robot_hd/wc_example/wc_example/wc_obstacle_detection/: main.py  wc_obstacle_detection.py
wc_robot_hd/wc_example/wc_example/wc_patrol_client/: main.py  wc_patrol_client.py
wc_robot_hd/wc_example/wc_example/wc_patrol_server/: main.py  wc_path.py  wc_patrol_server.py
wc_robot_hd/wc_example/wc_example/wc_position_control/: main.py  wc_path.py  wc_position_control.py
wc_robot_hd/wc_msgs/: package.xml
wc_robot_hd/wc_navigation2/: package.xml
wc_robot_hd/wc_navigation2/launch/: navigation2.launch.py
wc_robot_hd/wc_navigation2/map/: map.pgm  map.yaml
wc_robot_hd/wc_node/: CMakeLists.txt  package.xml
wc_robot_hd/wc_node/include/: control_table.hpp  diff_drive_controller.hpp  odometry.hpp  wc.hpp
wc_robot_hd/wc_node/include/wc_node/: diff_drive_controller.hpp  odometry.hpp  wc.hpp
wc_robot_hd/wc_node/include/wc_node/devices/: devices.hpp  motor_power.hpp  reset.hpp  sound.hpp
wc_robot_hd/wc_node/include/wc_node/sensors/: control_table.hpp  diff_drive_controller.hpp  dynamixel_sdk_wrapper.hpp  odometry.hpp  wc.hpp
wc_robot_hd/wc_node/param/: wc.yaml
wc_robot_hd/wc_node/src/: diff_drive_controller.cpp  dynamixel_sdk_wrapper.cpp  node_main.cpp  odometry.cpp  turtlebot3.cpp  wc.cpp
wc_robot_hd/wc_node/src/devices/: motor_power.cpp  reset.cpp  sound.cpp
wc_robot_hd/wc_node/src/sensors/: battery_state.cpp  imu.cpp  joint_state.cpp  sensor_state.cpp
wc_robot_hd/wc_robot/: CMakeLists.txt  package.xml
wc_robot_hd/wc_teleop/: package.xml  setup.cfg  setup.py
wc_robot_hd/wc_teleop/wc_teleop/script/: teleop_keyboard.py  wc_keyboard.py
wc_sim/: diff_drive_controller.cpp
wc_sim/wc_fake_node/: CHANGELOG.rst  CMakeLists.txt  package.xml
wc_sim/wc_fake_node/include/wc_fake_node/: wc_fake_node.hpp
wc_sim/wc_fake_node/launch/: rviz2.launch.py  wc_fake_node.launch.py
wc_sim/wc_fake_node/param/: wc.yaml
wc_sim/wc_fake_node/src/: wc_fake_node.cpp
wc_sim/wc_gazebo/: CHANGELOG.rst  CMakeLists.txt  package.xml
wc_sim/wc_gazebo/include/wc_gazebo/: wc_drive.hpp
wc_sim/wc_gazebo/launch/: empty_world.launch.py  robot_state_publisher.launch.py  spawn_wc.launch.py  wc_dqn_stage1.launch.py  wc_dqn_stage2.launch.py  wc_dqn_stage3.launch.py  wc_dqn_stage4.launch.py  wc_house.launch.py  wc_world.launch.py
wc_sim/wc_gazebo/models/wc_burger/: model-1_4.sdf  model.config  model.sdf
wc_sim/wc_gazebo/models/wc_common/: model.config
wc_sim/wc_gazebo/models/wc_dqn_world/: model.config  model.sdf
wc_sim/wc_gazebo/models/wc_house/: model.config  model.sdf
wc_sim/wc_gazebo/models/wc_waffle/: model-1_4.sdf  model.config  model.sdf
wc_sim/wc_gazebo/models/wc_waffle_pi/: model-1_4_.sdf  model.config  model.sdf
wc_sim/wc_gazebo/models/wc_world/: model-1_4.sdf  model.config  model.sdf
wc_sim/wc_gazebo/src/: wc_drive.cpp
wc_sim/wc_gazebo/urdf/: wc_burger.urdf  wc_waffle.urdf  wc_waffle_pi.urdf
wc_sim/wc_gazebo/worlds/: wc_dqn_stage1.world  wc_dqn_stage2.world  wc_dqn_stage3.world  wc_dqn_stage4.world  wc_house.world  wc_world.world
wc_sim/wc_simulations/: CHANGELOG.rst  CMakeLists.txt  package.xml
wc_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh
wc_ws/log/: latest_build
wc_ws/src/pre_launch/: CMakeLists.txt
wc_ws/src/pre_launch/launch/: wc.launch.py
wc_ws/src/pre_launch/scripts/: motor_cont.py
wc_ws/src/wc_description/: CMakeLists.txt
wc_ws/src/wc_description/urdf/: wc_bot.urdf
wc_ws/src/wc_navigation2/: CMakeLists.txt  package.xml
wc_ws/src/wc_navigation2/param/: wc.yaml
(+34 files in other folders)
